--- a/index.html
+++ b/index.html
@@ -27,182 +27,190 @@
 
                     </ul>
                 </div>
-            </div </div>
+            </div>
         </div>
 
+    </div>
+    <!--The first row contains the header, navigation bar -->
 
-        <!--The first row contains the header, navigation bar -->
-        <div class="row">
-
-
-            <div class="large-12 columns">
-
+    <div class="row img_space">
+        <div class="large-12 columns">
 
 
+            <h1 class="content_paper_name">Hi, I'm <br>
+                 <span>Ciku Mwangi.</span><br> A Graphic &amp; Web <br>Designer.</h1>
 
 
-                <div class="content-paper">
-                    <h1 class="content_paper_name">Hi, I'm <span></span>Ciku Mwangi</span> </h1>
 
-                    <p class="content_paper_info"> A sofware Developer. Just wonna
-                        <br> make cool websites </p>
 
-                </div>
-            </div>
-            <!--End Header-->
-            <!--
+
+
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+    <!--End Header-->
+    <!--
 
 -->
 
 
-        </div>
+    </div>
 
 
-        <!--The second row -->
-        <div class="row second" id="sec">
+    <!--The second row -->
+    <div class="row second" id="sec">
 
-            <!-- row 2 first column
+        <!-- row 2 first column
             with profile picture-->
 
-            <div class="large-4 columns aside">
-                <div class="row aside1"><img id="avatar" src="img/avatar.jpeg" /> </div>
-                <div class="row aside2">
-                    <h5 class="col name">
+        <div class="large-4 columns aside">
+            <div class="row aside1"><img id="avatar" src="img/avatar.jpeg" /> </div>
+            <div class="row aside2">
+                <h5 class="col name">
                  </h5>
-                </div>
+            </div>
 
-                <div class="row aside3">
-                    <p class="follow">Follow me on:</p>
-                    <ul class="nav_social">
-                        <li><a href="#"><i class="fa fa-facebook-square fa-2x" > </i></a></li>
-                        <li>
-                            <a href="#"> <i class="fa fa-twitter-square fa-2x"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-google-plus-square fa-2x"></i></li>
+            <div class="row aside3">
+                <p class="follow">Follow me on:</p>
+                <ul class="nav_social">
+                    <li><a href="#"><i class="fa fa-facebook-square fa-2x" > </i></a></li>
+                    <li>
+                        <a href="#"> <i class="fa fa-twitter-square fa-2x"></i></a>
+                    </li>
+                    <li><a href="#"><i class="fa fa-google-plus-square fa-2x"></i></li>
                         <li> <a href="#"><i class="fa fa-pinterest-square fa-2x"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <!--          End of  row 2 first column with profile picture-->
-            <div class="large-1 columns"></div>
-
-
-            <div class="large-6 columns col2">
-                <h4 class="col about">About Me</h4>
-                <p class="col text"> I am a software developer who is passionate about coding and creating new stuff that relate to technology. I hold a Bachelors Degree in
-                    <br>Mathematics and Computer Science </p>
-
-            </div>
-            <div class="large-1 columns">
-                <br>
+                </ul>
             </div>
         </div>
 
-        <div class="row port" id="foto">Portfolio</div>
-        <!--row three-->
-        <div class="row three small-up-1 medium-up-2 large-up-4">
+        <!--          End of  row 2 first column with profile picture-->
+        <div class="large-1 columns"></div>
 
-            <div class="column borderim">
-                <img src="img/FrontEndWebpng" class="thumbnail" alt="">
-            </div>
-            <div class="column borderim">
-                <img src="img/game%20of%20thrones.png" class="thumbnail" alt="">
-            </div>
-            <div class="column borderim">
-                <img src="img/queens.png" class="thumbnail" alt="">
-            </div>
-            <div class="column borderim">
-                <a href="http://studio-360-designs.bitballoon.com/">
-                    <img src="img/designx.png" class="thumbnail" alt=""></a>
-            </div>
-            <div class="column borderim">
-                <a href="http://quoraloginpage.bitballoon.com/">
-                    <img src="img/quora%20.png" class="thumbnail" alt=""></a>
-            </div>
-            <div class="column borderim">
-                <a href="http://frontendexercises.bitballoon.com/">
-                    <img src="img/ffrpng" class="thumbnail" alt=""></a>
-            </div>
-            <div class="column borderim">
-                <img src="img/FrontEndWebpng" class="thumbnail" alt="">
-            </div>
-            <div class="column borderim">
-                <img src="img/game%20of%20thrones.png" class="thumbnail" alt="">
+
+        <div class="large-6 columns col2">
+            <h4 class="col about">About Me</h4>
+            <p class="col text"> I am a software developer who is passionate about coding and creating new stuff that relate to technology. I hold a Bachelors Degree in
+                <br>Mathematics and Computer Science </p>
+
+        </div>
+        <div class="large-1 columns">
+            <br>
+        </div>
+    </div>
+
+    <div class="row port" id="foto">Portfolio</div>
+    <!--row three-->
+    <div class="row three small-up-1 medium-up-2 large-up-4">
+
+        <div class="column borderim">
+            <img src="img/FrontEndWebpng" class="thumbnail" alt="">
+        </div>
+        <div class="column borderim">
+            <img src="img/game%20of%20thrones.png" class="thumbnail" alt="">
+        </div>
+        <div class="column borderim">
+            <img src="img/queens.png" class="thumbnail" alt="">
+        </div>
+        <div class="column borderim">
+            <a href="http://studio-360-designs.bitballoon.com/">
+                <img src="img/designx.png" class="thumbnail" alt=""></a>
+        </div>
+        <div class="column borderim">
+            <a href="http://quoraloginpage.bitballoon.com/">
+                <img src="img/quora%20.png" class="thumbnail" alt=""></a>
+        </div>
+        <div class="column borderim">
+            <a href="http://frontendexercises.bitballoon.com/">
+                <img src="img/ffrpng" class="thumbnail" alt=""></a>
+        </div>
+        <div class="column borderim">
+            <img src="img/FrontEndWebpng" class="thumbnail" alt="">
+        </div>
+        <div class="column borderim">
+            <img src="img/game%20of%20thrones.png" class="thumbnail" alt="">
+        </div>
+    </div>
+
+
+    <!--row three-->
+
+    <div class="row four">
+        <div class="large-12 columns">
+            <div class="border2">
+                <h2 class="blogger">Blog</h2>
+                <h4 class="blog header"> How to create a Drop Down Navigation Menu </h4>
+                <p class="blog cont"> This post covers the step by step process of creating a drop down navigation bar.
+                    <br> So, one of my major hacks was to create a drop down menu so that i could use it in my one page Game of Thrones cover. In this tutorial, i will explain how i created the navigation using HTML CCS. </p>
+                <button class="alert hollow button" href="#">Read More</button>
             </div>
         </div>
 
+    </div>
 
-        <!--row three-->
+    <!--        row five contents-->
+    <div class="row five">
+        <div class="large-3 columns skillsetter">
+            <h3>Html5</h3>
 
-        <div class="row four">
-            <div class="large-12 columns">
-                <div class="border2">
-                    <h2 class="blogger">Blog</h2>
-                    <h4 class="blog header"> How to create a Drop Down Navigation Menu </h4>
-                    <p class="blog cont"> This post covers the step by step process of creating a drop down navigation bar.
-                        <br> So, one of my major hacks was to create a drop down menu so that i could use it in my one page Game of Thrones cover. In this tutorial, i will explain how i created the navigation using HTML CCS. </p>
-                    <button class="alert hollow button" href="#">Read More</button>
-                </div>
-            </div>
+            <img class="iconic" src="img/1460676594_badge-html-5.svg" alt="" />
 
+            <p class="inform">Web Development</p>
+        </div>
+        <div class="large-3 columns skillsetter">
+            <h3>Css3</h3>
+
+            <img class="iconic" src="img/1460676625_badge-css-3.svg" alt="" />
+
+            <p class="inform">Web Development
+                <br> CSS3 Animations</p>
+        </div>
+        <div class="large-3 columns skillsetter">
+            <h3>Javascript</h3>
+
+            <img class="iconic" src="img/1460676536_node_js.svg" alt="" />
+
+            <p class="inform">Functionality</p>
+        </div>
+        <div class="large-3 columns skillsetter">
+            <h3>Photoshop</h3>
+            <img class="iconic" src="img/Adobe%20Photoshop-48.png" alt="" />
+            <p class="inform"> Creative Designs
+                <br>Logo Designs </p>
         </div>
 
-        <!--        row five contents-->
-        <div class="row five">
-            <div class="large-3 columns skillsetter">
-                <h3>Html5</h3>
 
-                <img class="iconic" src="img/1460676594_badge-html-5.svg" alt="" />
+    </div>
+    <!--    My Contact form -->
+    <div class="row formcont">
+        <div class="large-3 columns">
+            <br>
+        </div>
 
-                <p class="inform">Web Development</p>
-            </div>
-            <div class="large-3 columns skillsetter">
-                <h3>Css3</h3>
 
-                <img class="iconic" src="img/1460676625_badge-css-3.svg" alt="" />
+        <div class="large-3 columns">
+            <br>
+        </div>
+    </div>
+    <!--    My Contact form -->
 
-                <p class="inform">Web Development
-                    <br> CSS3 Animations</p>
-            </div>
-            <div class="large-3 columns skillsetter">
-                <h3>Javascript</h3>
-
-                <img class="iconic" src="img/1460676536_node_js.svg" alt="" />
-
-                <p class="inform">Functionality</p>
-            </div>
-            <div class="large-3 columns skillsetter">
-                <h3>Photoshop</h3>
-                <img class="iconic" src="img/Adobe%20Photoshop-48.png" alt="" />
-                <p class="inform"> Creative Designs
-                    <br>Logo Designs </p>
-            </div>
-
+    <!--        Foooter with contacts and copyright info -->
+    <div class="row footer">
+        <div class="large-6 columns">
+            <p class="copy"></p>
 
         </div>
-        <!--    My Contact form -->
-        <div class="row formcont">
-            <div class="large-3 columns">
-                <br>
-            </div>
-
-
-            <div class="large-3 columns">
-                <br>
-            </div>
+        <div class="large-6 columns">
         </div>
-        <!--    My Contact form -->
-
-        <!--        Foooter with contacts and copyright info -->
-        <div class="row footer">
-            <div class="large-6 columns">
-                <p class="copy"></p>
-
-            </div>
-            <div class="large-6 columns">
-            </div>
-        </div>
+    </div>
     </div>
 
     <script src="js/vendor/jquery.min.js"></script>
