added about me , profile pic in row 2

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="container">
-        <div class="row">
+        <div class="row navbar">
             <div class="large-12 columns">
                 <div id="header" class="header">
                     <div id="nav">
@@ -41,50 +41,34 @@
                 <h1 class="content_paper_name">Hi, I'm <br>
                  <span>Ciku Mwangi.</span><br> A Graphic &amp; Web <br>Designer.</h1>
 
-
-
-
                 <div class="arrow bounce">
 
                 </div>
 
-
-
             </div>
         </div>
-
-
-
-
-
-
-
-
-
 
         <!--End Header-->
         <!--
 
 -->
 
-
-
-
-
         <!--The second row -->
-        <div class="row scroll-bg second " id="sec">
+        <div class="row scroll-bg second" id="sec">
+            <div class="large-12 columns ">
+                <div class="circle"></div>
+                <h4 class="col about">About Me</h4>
+                <p class="col text"> I am a software developer who is passionate
+                    <br> about coding and creating new stuff that relate to technology.
+                    <br> I hold a Bachelors Degree in
+                    <br>Mathematics and Computer Science </p>
 
-            <!-- row 2 first column
-            with profile picture-->
-
-            <div class="large-4 columns aside">
-                <div class="row aside1"><img id="avatar" src="img/avatar.jpeg" /> </div>
-
-                <h5 class="col name">
-                 </h5>
+            </div>
+        </div>
 
 
-                <!--
+
+        <!--
 
                     <p class="follow">Follow me on:</p>
                     <ul class="nav_social">
@@ -97,22 +81,12 @@
                     </ul>
 -->
 
-            </div>
 
-            <!--          End of  row 2 first column with profile picture-->
-            <div class="large-1 columns"></div>
+        <!--          End of  row 2 first column with profile picture-->
 
 
-            <div class="large-6 columns col2">
-                <h4 class="col about">About Me</h4>
-                <p class="col text"> I am a software developer who is passionate about coding and creating new stuff that relate to technology. I hold a Bachelors Degree in
-                    <br>Mathematics and Computer Science </p>
 
-            </div>
-            <div class="large-1 columns">
-                <br>
-            </div>
-        </div>
+
 
         <div class="row port" id="foto">Portfolio</div>
         <!--row three-->
