overlay in second  image

--- a/index.html
+++ b/index.html
@@ -85,7 +85,38 @@
         <!--          End of  row 2 first column with profile picture-->
 
 
+        <div class="row fixed_bg bg_img_2 ">
+            <div class="large-3 columns skillsetter">
+                <h3>Html5</h3>
 
+                <img class="iconic" src="img/1460676594_badge-html-5.svg" alt="" />
+
+                <p class="inform">Web Development</p>
+            </div>
+            <div class="large-3 columns skillsetter">
+                <h3>Css3</h3>
+
+                <img class="iconic" src="img/1460676625_badge-css-3.svg" alt="" />
+
+                <p class="inform">Web Development
+                    <br> CSS3 Animations</p>
+            </div>
+            <div class="large-3 columns skillsetter">
+                <h3>Javascript</h3>
+
+                <img class="iconic" src="img/1460676536_node_js.svg" alt="" />
+
+                <p class="inform">Functionality</p>
+            </div>
+            <div class="large-3 columns skillsetter">
+                <h3>Photoshop</h3>
+                <img class="iconic" src="img/Adobe%20Photoshop-48.png" alt="" />
+                <p class="inform"> Creative Designs
+                    <br>Logo Designs </p>
+            </div>
+
+
+        </div>
 
 
         <div class="row port" id="foto">Portfolio</div>
@@ -138,38 +169,7 @@
         </div>
 
         <!--        row five contents-->
-        <div class="row five">
-            <div class="large-3 columns skillsetter">
-                <h3>Html5</h3>
 
-                <img class="iconic" src="img/1460676594_badge-html-5.svg" alt="" />
-
-                <p class="inform">Web Development</p>
-            </div>
-            <div class="large-3 columns skillsetter">
-                <h3>Css3</h3>
-
-                <img class="iconic" src="img/1460676625_badge-css-3.svg" alt="" />
-
-                <p class="inform">Web Development
-                    <br> CSS3 Animations</p>
-            </div>
-            <div class="large-3 columns skillsetter">
-                <h3>Javascript</h3>
-
-                <img class="iconic" src="img/1460676536_node_js.svg" alt="" />
-
-                <p class="inform">Functionality</p>
-            </div>
-            <div class="large-3 columns skillsetter">
-                <h3>Photoshop</h3>
-                <img class="iconic" src="img/Adobe%20Photoshop-48.png" alt="" />
-                <p class="inform"> Creative Designs
-                    <br>Logo Designs </p>
-            </div>
-
-
-        </div>
         <!--    My Contact form -->
         <div class="row formcont">
             <div class="large-3 columns">
