--- a/index.html
+++ b/index.html
@@ -94,21 +94,18 @@
             <div class="row skills">
                 <div class="large-3 columns skillsetter">
                     <h3>Html5</h3>
-
                     <img class="iconic" src="img/1460676594_badge-html-5.svg" alt="" />
 
 
                 </div>
                 <div class="large-3 columns skillsetter">
                     <h3>Css3</h3>
-
                     <img class="iconic" src="img/1460676625_badge-css-3.svg" alt="" />
 
 
                 </div>
                 <div class="large-3 columns skillsetter">
                     <h3>Javascript</h3>
-
                     <img class="iconic" src="img/1460676536_node_js.svg" alt="" />
 
 
@@ -122,81 +119,81 @@
 
         </div>
 
-
-        <div class="row port" id="foto">Portfolio</div>
         <!--row three-->
-        <div class="row three small-up-1 medium-up-2 large-up-4">
+        <div class="row port scroll-bg fixed_bg " id="foto">
 
-            <div class="column borderim">
-                <img src="img/FrontEndWebpng" class="thumbnail" alt="">
-            </div>
-            <div class="column borderim">
-                <img src="img/game%20of%20thrones.png" class="thumbnail" alt="">
-            </div>
-            <div class="column borderim">
-                <img src="img/queens.png" class="thumbnail" alt="">
-            </div>
-            <div class="column borderim">
-                <a href="http://studio-360-designs.bitballoon.com/">
-                    <img src="img/designx.png" class="thumbnail" alt=""></a>
-            </div>
-            <div class="column borderim">
-                <a href="http://quoraloginpage.bitballoon.com/">
-                    <img src="img/quora%20.png" class="thumbnail" alt=""></a>
-            </div>
-            <div class="column borderim">
-                <a href="http://frontendexercises.bitballoon.com/">
-                    <img src="img/ffrpng" class="thumbnail" alt=""></a>
-            </div>
-            <div class="column borderim">
-                <img src="img/FrontEndWebpng" class="thumbnail" alt="">
-            </div>
-            <div class="column borderim">
-                <img src="img/game%20of%20thrones.png" class="thumbnail" alt="">
-            </div>
-        </div>
+            <div class="row three small-up-1 medium-up-2 large-up-4">
 
-
-        <!--row three-->
-
-        <div class="row four">
-            <div class="large-12 columns">
-                <div class="border2">
-                    <h2 class="blogger">Blog</h2>
-                    <h4 class="blog header"> How to create a Drop Down Navigation Menu </h4>
-                    <p class="blog cont"> This post covers the step by step process of creating a drop down navigation bar.
-                        <br> So, one of my major hacks was to create a drop down menu so that i could use it in my one page Game of Thrones cover. In this tutorial, i will explain how i created the navigation using HTML CCS. </p>
-                    <button class="alert hollow button" href="#">Read More</button>
+                <div class="column borderim">
+                    <img src="img/FrontEndWebpng" class="thumbnail" alt="">
+                </div>
+                <div class="column borderim">
+                    <img src="img/game%20of%20thrones.png" class="thumbnail" alt="">
+                </div>
+                <div class="column borderim">
+                    <img src="img/queens.png" class="thumbnail" alt="">
+                </div>
+                <div class="column borderim">
+                    <a href="http://studio-360-designs.bitballoon.com/">
+                        <img src="img/designx.png" class="thumbnail" alt=""></a>
+                </div>
+                <div class="column borderim">
+                    <a href="http://quoraloginpage.bitballoon.com/">
+                        <img src="img/quora%20.png" class="thumbnail" alt=""></a>
+                </div>
+                <div class="column borderim">
+                    <a href="http://frontendexercises.bitballoon.com/">
+                        <img src="img/ffrpng" class="thumbnail" alt=""></a>
+                </div>
+                <div class="column borderim">
+                    <img src="img/FrontEndWebpng" class="thumbnail" alt="">
+                </div>
+                <div class="column borderim">
+                    <img src="img/game%20of%20thrones.png" class="thumbnail" alt="">
                 </div>
             </div>
 
+
+            <!--row three-->
+
+            <div class="row four">
+                <div class="large-12 columns">
+                    <div class="border2">
+                        <h2 class="blogger">Blog</h2>
+                        <h4 class="blog header"> How to create a Drop Down Navigation Menu </h4>
+                        <p class="blog cont"> This post covers the step by step process of creating a drop down navigation bar.
+                            <br> So, one of my major hacks was to create a drop down menu so that i could use it in my one page Game of Thrones cover. In this tutorial, i will explain how i created the navigation using HTML CCS. </p>
+                        <button class="alert hollow button" href="#">Read More</button>
+                    </div>
+                </div>
+
+            </div>
+
+            <!--        row five contents-->
+
+            <!--    My Contact form -->
+            <div class="row formcont">
+                <div class="large-3 columns">
+                    <br>
+                </div>
+
+
+                <div class="large-3 columns">
+                    <br>
+                </div>
+            </div>
+            <!--    My Contact form -->
+
+            <!--        Foooter with contacts and copyright info -->
+            <div class="row footer">
+                <div class="large-6 columns">
+                    <p class="copy"></p>
+
+                </div>
+                <div class="large-6 columns">
+                </div>
+            </div>
         </div>
-
-        <!--        row five contents-->
-
-        <!--    My Contact form -->
-        <div class="row formcont">
-            <div class="large-3 columns">
-                <br>
-            </div>
-
-
-            <div class="large-3 columns">
-                <br>
-            </div>
-        </div>
-        <!--    My Contact form -->
-
-        <!--        Foooter with contacts and copyright info -->
-        <div class="row footer">
-            <div class="large-6 columns">
-                <p class="copy"></p>
-
-            </div>
-            <div class="large-6 columns">
-            </div>
-        </div>
-    </div>
     </div>
     <script src="js/vendor/jquery.min.js"></script>
     <script src="js/vendor/what-input.min.js"></script>
