portfolio redo . deleted some pics and added a new row

--- a/index.html
+++ b/index.html
@@ -122,26 +122,32 @@
 
         <!--row three-->
 
-        <div class="row port scroll-bg fixed_bg " id="foto">
+        <div class="row scroll-bg fixed_bg " id="foto">
+            <div class="row skills">
 
-            <div class="row three small-up-1 medium-up-2 large-up-4">
+                <h4 class="about">Portfolio</h4>
 
-                <div class="column borderim">
-                    <img src="img/FrontEndWebpng" class="thumbnail" alt="">
-                </div>
-                <div class="column borderim">
-                    <img src="img/game%20of%20thrones.png" class="thumbnail" alt="">
-                </div>
-                <div class="column borderim">
-                    <img src="img/queens.png" class="thumbnail" alt="">
-                </div>
-                <div class="column borderim">
-                    <a href="http://studio-360-designs.bitballoon.com/">
-                        <img src="img/designx.png" class="thumbnail" alt=""></a>
+            </div>
+            <div class="row port">
+                <div class="row three small-up-1 medium-up-2 large-up-4">
+
+                    <div class="column borderim">
+                        <img src="img/FrontEndWebpng" class="thumbnail" alt="">
+                    </div>
+                    <div class="column borderim">
+                        <img src="img/game%20of%20thrones.png" class="thumbnail" alt="">
+                    </div>
+                    <div class="column borderim">
+                        <img src="img/queens.png" class="thumbnail" alt="">
+                    </div>
+                    <div class="column borderim">
+                        <a href="http://studio-360-designs.bitballoon.com/">
+                            <img src="img/designx.png" class="thumbnail" alt=""></a>
+                    </div>
+
                 </div>
 
             </div>
-
         </div>
         <!--row three-->
 
