--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </div>
         <!--row three-->
 
-        <div class="row four">
+        <div class="row four  scroll-bg fixed_bg bg_img_2 ">
             <div class="large-12 columns">
                 <div class="border2">
                     <h2 class="blogger">Blog</h2>
