--- a/index.html
+++ b/index.html
@@ -167,8 +167,21 @@
         <!--        row five contents-->
 
         <!--    My Contact form -->
-        <div class="row formcont">
-            \
+        <div class="row formcont scroll-bg fixed_bg">
+            <h2>Contact Me</h2>
+
+            <form action="">
+                <input type="text" id="n" autofocus>
+                <label for="n" class="name"><span class="label-text">Name</span></label>
+
+                <input type="email" id="e">
+                <label for="e" class="email"><span class="label-text">Email</span></label>
+
+                <textarea id="m"></textarea>
+                <label for="m" class="message"><span class="label-text">Message</span></label>
+
+                <input type="submit" value="Send message" class="button">
+            </form>
         </div>
         <!--    My Contact form -->
 
