--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         <div class="row fixed_bg bg_img_1">
             <div class="large-12 columns">
 
-
-                <h1 class="content_paper_name">Hi, I'm <br>
+                <div class="overlay">
+                    <h1 class="content_paper_nme">Hi, I'm <br>
                  <span>Ciku Mwangi.</span><br> A Graphic &amp; Web <br>Designer.</h1>
-
+                </div>
                 <div class="arrow bounce">
 
                 </div>
@@ -167,21 +167,23 @@
         <!--        row five contents-->
 
         <!--    My Contact form -->
-        <div class="row formcont scroll-bg fixed_bg">
-            <h2>Contact Me</h2>
+        <div class="row  scroll-bg formcont">
+            <div class="large-6 large-centered ">
+                <h2>Contact Me</h2>
 
-            <form action="">
-                <input type="text" id="n" autofocus>
-                <label for="n" class="name"><span class="label-text">Name</span></label>
+                <form action="">
+                    <input type="text" id="n" autofocus>
+                    <label for="n" class="name"><span class="label-text">Name</span></label>
 
-                <input type="email" id="e">
-                <label for="e" class="email"><span class="label-text">Email</span></label>
+                    <input type="email" id="e">
+                    <label for="e" class="email"><span class="label-text">Email</span></label>
 
-                <textarea id="m"></textarea>
-                <label for="m" class="message"><span class="label-text">Message</span></label>
+                    <textarea id="m"></textarea>
+                    <label for="m" class="message"><span class="label-text">Message</span></label>
 
-                <input type="submit" value="Send message" class="button">
-            </form>
+                    <input type="submit" value="Send message" class="button">
+                </form>
+            </div>
         </div>
         <!--    My Contact form -->
 
