added animations to lines in home page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
                 <div class="overlay">
                     <h1 class="content_paper_nme">Hi, I'm <br>
-                 <span>Ciku Mwangi.</span><br> A Graphic &amp; Web <br>Designer.</h1>
+                Ciku Mwangi.<br> <span><hr id= "thread1">
+                A Graphic &amp; Web Designer 		<hr id="thread3" class="right"></span></h1>
                 </div>
                 <div class="arrow bounce">
 
