--- a/index.html
+++ b/index.html
@@ -69,18 +69,6 @@
 
 
 
-        <!--
-
-                    <p class="follow">Follow me on:</p>
-                    <ul class="nav_social">
-                        <li><a href="#"><i class="fa fa-facebook-square fa-2x" > </i></a></li>
-                        <li>
-                            <a href="#"> <i class="fa fa-twitter-square fa-2x"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-google-plus-square fa-2x"></i></li>
-                        <li> <a href="#"><i class="fa fa-pinterest-square fa-2x"></i></a></li>
-                    </ul>
--->
 
 
         <!--          End of  row 2 first column with profile picture-->
@@ -123,33 +111,31 @@
 
         <!--row three-->
 
-        <div class="row scroll-bg fixed_bg " id="foto">
+        <div class="row scroll-bg fixed_bg effect-port" id="foto">
             <div class="row skills">
 
                 <h4 class="about">Portfolio</h4>
 
             </div>
-            <div class="row port">
-                <div class="row three small-up-1 medium-up-2 large-up-4">
 
-                    <div class="column borderim">
-                        <img src="img/FrontEndWebpng" class="thumbnail" alt="">
-                    </div>
-                    <div class="column borderim">
-                        <img src="img/game%20of%20thrones.png" class="thumbnail" alt="">
-                    </div>
-                    <div class="column borderim">
-                        <img src="img/queens.png" class="thumbnail" alt="">
-                    </div>
-                    <div class="column borderim">
-                        <a href="http://studio-360-designs.bitballoon.com/">
-                            <img src="img/designx.png" class="thumbnail" alt=""></a>
-                    </div>
+
+            <div class="row small-up-1 medium-up-2 large-up-4 scroll-bg fixed_bg">
+                <div class="column">
+                    <img src="img/game%20of%20thrones.png" class="thumbnail" alt="">
 
                 </div>
-
+                <div class="column">
+                    <img src="img/quora%20.png" class="thumbnail" alt="">
+                </div>
+                <div class="column">
+                    <img src="img/queens.png" class="thumbnail" alt="">
+                </div>
+                <div class="column">
+                    <img src="img/FrontEndWebpng" class="thumbnail" alt="">
+                </div>
             </div>
         </div>
+
         <!--row three-->
 
         <div class="row four  scroll-bg fixed_bg bg_img_2 ">
@@ -168,33 +154,25 @@
         <!--        row five contents-->
 
         <!--    My Contact form -->
-        <div class="row  scroll-bg formcont">
-            <div class="large-6 large-centered ">
-                <h2>Contact Me</h2>
 
-                <form action="">
-                    <input type="text" id="n" autofocus>
-                    <label for="n" class="name"><span class="label-text">Name</span></label>
-
-                    <input type="email" id="e">
-                    <label for="e" class="email"><span class="label-text">Email</span></label>
-
-                    <textarea id="m"></textarea>
-                    <label for="m" class="message"><span class="label-text">Message</span></label>
-
-                    <input type="submit" value="Send message" class="button">
-                </form>
-            </div>
-        </div>
         <!--    My Contact form -->
 
         <!--        Foooter with contacts and copyright info -->
         <div class="row footer">
-            <div class="large-6 columns">
+            <div class="large-8 columns">
                 <p class="copy"></p>
 
             </div>
-            <div class="large-6 columns">
+            <div class="large-4 columns ">
+                <p class="follow">Follow me on:</p>
+                <ul class="nav_social">
+                    <li><a href="#"><i class="fa fa-facebook-square fa-2x" > </i></a></li>
+                    <li>
+                        <a href="#"> <i class="fa fa-twitter-square fa-2x"></i></a>
+                    </li>
+                    <li><a href="#"><i class="fa fa-google-plus-square fa-2x"></i></li>
+                        <li> <a href="#"><i class="fa fa-pinterest-square fa-2x"></i></a></li>
+                </ul>
             </div>
         </div>
     </div>
