--- a/index.html
+++ b/index.html
@@ -160,9 +160,19 @@
         <!--        Foooter with contacts and copyright info -->
         <div class="row footer">
             <div class="large-8 columns">
-                <p class="copy"></p>
+                <p> <a href="#" data-reveal-id="exampleModal1"> Contact Me </a></p>
+                <div class="reveal" id="exampleModal1" data-reveal>
+                    <h1>Awesome. I Have It.</h1>
+                    <p class="lead">Your couch. It is mine.</p>
+                    <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
+                    <button class="close-button" data-close aria-label="Close modal" type="button">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
 
             </div>
+
+
             <div class="large-4 columns ">
                 <p class="follow">Follow me on:</p>
                 <ul class="nav_social">
@@ -176,7 +186,7 @@
             </div>
         </div>
     </div>
-    </div>
+
     <script src="js/vendor/jquery.min.js"></script>
     <script src="js/vendor/what-input.min.js"></script>
     <script src="js/foundation.min.js"></script>
