--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <div id="nav">
                         <ul>
                             <li><a href="#top">Home</a></li>
-                            <li><a href="#about">About Me </a></li>
-                            <li><a href="#services">Portfolio</a></li>
+                            <li><a href="#sec">About Me </a></li>
+                            <li><a href="#foto">Portfolio</a></li>
                             <li><a href="#blog">Blog</a></li>
                             <li><a href="#contact">Contact</a></li>
 
@@ -37,11 +37,11 @@
         <div class="row fixed_bg bg_img_1">
             <div class="large-12 columns">
 
-                <div class="overlay">
-                    <h1 class="content_paper_nme">Hi, I'm <br>
+                <!--                <div class="overlay">-->
+                <h1 class="content_paper_nme">Hi, I'm <br>
                 Ciku Mwangi.<br> <span><hr id= "thread1">
                 A Graphic &amp; Web Designer 		<hr id="thread3" class="right"></span></h1>
-                </div>
+                <!--                </div>-->
                 <div class="arrow bounce">
 
                 </div>
@@ -51,7 +51,6 @@
 
         <!--End Header-->
         <!--
-
 -->
 
         <!--The second row -->
@@ -74,7 +73,7 @@
         <!--          End of  row 2 first column with profile picture-->
 
 
-        <div class="row scroll-bg fixed_bg  bg_img_2 ">
+        <div class="row scroll-bg fixed_bg  bg_img_2" id="skil">
             <div class="row skills">
 
                 <h4 class="about"> Skills</h4>
